[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hivemind-redis-database"
description = "Redis database plugin for HiveMind core with RediSearch support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "jarbasAi", email = "jarbasai@mailfence.com" }
]
keywords = ["hivemind", "redis", "database", "plugin"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "redis>=4.2.0",
    "hiredis>=2.0.0",
    "hivemind-plugin-manager>=0.5.0,<1.0.0",
    "hivemind-bus-client>=0.4.4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/JarbasHiveMind/hivemind-redis-database"
Repository = "https://github.com/JarbasHiveMind/hivemind-redis-database"
Issues = "https://github.com/JarbasHiveMind/hivemind-redis-database/issues"

[project.entry-points."hivemind.database"]
hivemind-redis-db-plugin = "hivemind_redis_database:RedisDB"

[project.scripts]
hivemind-redis-migrate-cluster = "hivemind_redis_database.migration:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.dynamic]
version = { attr = "hivemind_redis_database.version.__version__" }
